src/App.css
* {
  box-sizing: border-box;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

a, a:visited{
  text-decoration: none;
}

.App {
  text-align: center;
  
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

.App-link {
  color: #61dafb;
}

.row-container {
  display: flex;
  flex-direction: row;

  padding: 10px;
}

.col-container {
  display: flex;
  flex-direction: column;

  padding: 10px;
}

.flex-grow {
  flex-grow: 1;
}

@media only screen and (max-width: 1200px) {
  .hide-mobile {
    display: none;
  }
}

.chats-list {
  width: 1000px;
  min-width: 25%;
  max-width: 30%;

  margin-top: 20px;
}

.chat-module {
  max-height: 100vh;
  width: 100vw;

  padding-top: 50px;
}

.login-module {
  max-width: 500px;
  max-height: 500px;
  padding: 25px;

  background: white;
}

.chatroom {
  justify-content: flex-end;
}

.msg-list {
  overflow-y: auto;
}

.msg-sender {
  font-size: calc(10px + 1vmin);
  max-width: 50%;
}

.msg-body {
  padding-left: 10px;
  padding-right: 10px;

  max-width: 50%;
}

.msg-self {
  align-self: flex-end;
}

.msg-other {
  align-self: flex-start;
}

